src/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>candidatei__c</fullName>
        <label>candidate</label>
        <referenceTo>candidate__c</referenceTo>
        <relationshipLabel>jobs applications</relationshipLabel>
        <relationshipName>jobs_applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddd__c</fullName>
        <externalId>true</externalId>
        <label>ddd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>positioni__c</fullName>
        <label>position</label>
        <referenceTo>position__c</referenceTo>
        <relationshipLabel>jobs applications</relationshipLabel>
        <relationshipName>jobs_applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>job applied Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>jobs applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>